# backend/src/swagger.yaml
@@ -84,6 +84,8 @@ components:
           type: object
         description:
           type: string
+        score:
+          type: integer
         added_at:
           type: string
         updated_at:
@@ -98,6 +100,7 @@ components:
         genre: Crime
         user_id: bbcb7eae48aa8ebcf9170140
         description: Lorem
+        score: 7.25
         added_at: 2016-04-08T15:06:21.595Z
         updated_at: 2016-04-08T15:06:21.595Z
         imageUrl: http://localhost:3000/api/image/book-db0b0c1f83fb29f652cc5a2f.png
@@ -116,6 +119,7 @@ components:
             genre: Crime
             user_id: bbcb7eae48aa8ebcf9170140
             description: Lorem
+            score: 7.25
             added_at: 2016-04-08T15:06:21.595Z
             updated_at: 2016-04-08T15:06:21.595Z
             imageUrl: http://localhost:3000/api/image/book-db0b0c1f83fb29f652cc5a2f.png
@@ -179,6 +183,89 @@ components:
             content: Lorem
             created_at: 2016-04-08T15:06:21.595Z
             updated_at: 2016-04-08T15:06:21.595Z
+        pages:
+          type: integer
+          example: 10
+    comment:
+      type: object
+      properties:
+        _id:
+          type: string
+        content:
+          type: string
+        created_at:
+          type: string
+        updated_at:
+          type: string
+        user:
+          type: object
+          properties:
+            _id:
+              type: string
+            username:
+              type: string
+            role:
+              type: string
+        review:
+          type: object
+          properties:
+            _id:
+              type: string
+            score:
+              type: integer
+            content:
+              type: string
+            user:
+              type: object
+              properties:
+                _id:
+                  type: string
+                username:
+                  type: string
+                role:
+                  type: string
+      example:
+        _id: "7ef503b3e63a6bcb56f8db37"
+        content: "Lorem"
+        created_at: "2016-04-08T15:06:21.595Z"
+        updated_at: "2016-04-08T15:06:21.595Z"
+        user:
+          _id: "db0b0c1f83fb29f652cc5a2f"
+          username: "admin"
+          role: "admin"
+        review:
+          _id: "a826b9febba8c411cf6d82cb"
+          score: 8
+          content: "Lorem"
+          user:
+            _id: "db0b0c1f83fb29f652cc5a2f"
+            username: "admin"
+            role: "admin"
+
+    CommentListResponse:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/comment'
+          example:
+            _id: "7ef503b3e63a6bcb56f8db37"
+            content: "Lorem"
+            created_at: "2016-04-08T15:06:21.595Z"
+            updated_at: "2016-04-08T15:06:21.595Z"
+            user:
+              _id: "db0b0c1f83fb29f652cc5a2f"
+              username: "admin"
+              role: "admin"
+            review:
+              _id: "a826b9febba8c411cf6d82cb"
+              score: 8
+              content: "Lorem"
+              user:
+                _id: "db0b0c1f83fb29f652cc5a2f"
+                username: "admin"
+                role: "admin"
         pages:
           type: integer
           example: 10
@@ -293,6 +380,28 @@ components:
       example:
         score: optional
         content: optional
+    comment:
+      type: object
+      required:
+        - review_id
+        - content
+      properties:
+        review_id:
+          type: string
+        content:
+          type: string
+        example:
+          review_id: required
+          content: required
+    commentput:
+      type: object
+      required:
+        - content
+      properties:
+        content:
+          type: string
+        example:
+          content: required
 
   securitySchemes:
     ApiKeyAuth:
@@ -1055,6 +1164,168 @@ paths:
                     example: Review deleted
         404:
           description: Review not found
+
+  /api/comments:
+    get:
+      summary: Get all comments
+      tags:
+        - Comments
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: Page of pagination (default 0)
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: Limit of requests (default 10)
+        - in: query
+          name: fields
+          description: Comma-separated list of fields to include in the response
+          schema:
+            type: string
+            example: _id,review._id,review.content,review.score,review.user._id,review.user.username,review.user.role,review.user.imageUrl,user._id,user.username,user.role,user.imageUrl,content,created_at,updated_at
+        - in: query
+          name: user_id
+          schema:
+            type: string
+          description: Filter reviews by user ID
+        - in: query
+          name: review_id
+          schema:
+            type: string
+          description: Filter reviews by review ID
+        - in: query
+          name: minCreate
+          schema:
+            type: string
+          description: Filter reviews by minimum creation date
+        - in: query
+          name: maxCreate
+          schema:
+            type: string
+          description: Filter reviews by maximum creation date
+        - in: query
+          name: minUpdate
+          schema:
+            type: string
+          description: Filter reviews by minimum update date
+        - in: query
+          name: maxUpdate
+          schema:
+            type: string
+          description: Filter reviews by maximum update date
+      responses:
+        200:
+          description: The list of comments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CommentListResponse'
+    post:
+      summary: Create a new comment
+      tags:
+        - Comments
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/requestBodies/comment'
+      responses:
+        201:
+          description: The created comment
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/comment'
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized
+      security:
+        - ApiKeyAuth: []
+
+  /api/comments/{id}:
+    get:
+      summary: Get a specific comment by id
+      tags:
+        - Comments
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Data of the comment
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/comment'
+        404:
+          description: Comment not found
+    put:
+      summary: Update a comment by id
+      tags:
+        - Comments
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      security:
+        - ApiKeyAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/requestBodies/commentput'
+      responses:
+        200:
+          description: Data of the updated comment
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/comment'
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized
+        404:
+          description: Comment not found
+    delete:
+      summary: Delete a comment by id
+      tags:
+        - Comments
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      security:
+        - ApiKeyAuth: []
+      responses:
+        200:
+          description: Comment successfully deleted
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Comment deleted
+        404:
+          description: Comment not found
 
 security:
   - ApiKeyAuth: []
